# rumuki-server

./: .editorconfig  .env  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  server.cabal  stack.yaml
config/: models  routes  settings.yml  test-settings.yml
messages/: en.msg
migrations/: add-device-preferred-localization.txt  add-device-updated.txt  add-model-long-distance-transfer.txt  add-model-perpetual-grant.txt  add-model-remote-transfer.txt  add-model-screen-capture-detection.txt  add-playback-grant-created.txt  add-remote-transfer-seen.txt  add-remote-transfer-sender-nickname-cipher.txt  add-remote-transfer-sender-public-key-cipher.txt  add-remote-transfer-type.txt  add-subscriber-source.txt  alter-playback-grant-created-default.txt  index-playback-grant-recipient-key-fingerprint.txt  index-playback-grant-recording-uid.txt  remove-device-token-fingerprint-index.txt  remove-remote-transfer-sender-key-fingerprint-cipher.txt  schema.txt
src/: Application.hs  Foundation.hs  Import.hs  Migrations.hs  Model.hs  Settings.hs
src/Data/: Extension.hs
src/Handler/: DeviceUpdate.hs  Devices.hs  Extension.hs  Feedback.hs  Health.hs  Home.hs  LongDistanceTransfer.hs  LongDistanceTransfers.hs  MarkAsSeen.hs  PerpetualGrant.hs  PerpetualGrants.hs  PlaybackGrant.hs  PlaybackGrants.hs  PlaybackGrantsSearch.hs  RemoteTransfer.hs  RemoteTransfers.hs  ScreenCaptureDetection.hs  ScreenCaptureDetections.hs  ScreenCaptureNotification.hs  Subscribers.hs
src/Import/: NoFoundation.hs
src/Model/: ConsumedGrant.hs  Device.hs  Extension.hs  LongDistanceTransfer.hs  PerpetualGrant.hs  PlaybackGrant.hs  PushNotification.hs  RemoteTransfer.hs  RemoteTransferType.hs  Subscriber.hs
test/: ApplicationSpec.hs  TestExtension.hs  TestFactory.hs  TestImport.hs
test/Handler/: DeviceUpdateSpec.hs  DevicesSpec.hs  LongDistanceTransferSpec.hs  LongDistanceTransfersSpec.hs  MarkAsSeenSpec.hs  PerpetualGrantSpec.hs  PerpetualGrantsSpec.hs  PlaybackGrantSpec.hs  PlaybackGrantsSpec.hs  RemoteTransferSpec.hs  RemoteTransfersSpec.hs  ScreenCaptureDetectionsSpec.hs  SubscribersSpec.hs
