name:              server
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src, app
    exposed-modules: Application
                     Data.Extension
                     Foundation
                     Handler.Extension
                     Handler.Devices
                     Handler.Feedback
                     Handler.Health
                     Handler.Home
                     Handler.PlaybackGrant
                     Handler.PlaybackGrants
                     Handler.ScreenCaptureNotification
                     Handler.Subscribers
                     Import
                     Import.NoFoundation
                     Migrations
                     Model
                     Model.Extension
                     Model.PlaybackGrant
                     Model.PushNotification
                     Model.Subscriber
                     Model.Device
                     Settings

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0 -fno-warn-orphans
    else
        ghc-options:   -Wall -fwarn-tabs -O2 -fno-warn-orphans

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                RecordWildCards
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

    build-depends:
                   HDBC-postgresql
                 , SHA
                 , aeson                         >= 0.6        && < 0.12
                 , asn1-encoding
                 , asn1-types
                 , aws
                 , base                          >= 4          && < 5
                 , base16-bytestring
                 , base64-bytestring
                 , binary
                 , bytestring                    >= 0.9        && < 0.11
                 , case-insensitive
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , conduit                       >= 1.0        && < 2.0
                 , conduit-extra
                 , connection
                 , containers
                 , data-default
                 , data-easy
                 , dbmigrations
                 , directory                     >= 1.1        && < 1.3
                 , either
                 , email-validate
                 , entropy
                 , fast-logger                   >= 2.2        && < 2.5
                 , file-embed
                 , filepath
                 , hourglass
                 , http-conduit                  >= 2.1.10     && < 2.2
                 , http-types
                 , load-env
                 , mime-mail
                 , mime-types
                 , monad-control                 >= 0.3        && < 1.1
                 , monad-logger                  >= 0.3        && < 0.4
                 , MonadRandom
                 , mtl
                 , network
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , random
                 , safe
                 , silently
                 , smtp-mail
                 , template-haskell
                 , text                          >= 0.11       && < 2.0
                 , time
                 , transformers
                 , unordered-containers
                 , utf8-string
                 , vector
                 , wai
                 , wai-cors
                 , wai-extra                     >= 3.0        && < 3.1
                 , wai-logger                    >= 2.2        && < 2.4
                 , warp                          >= 3.0        && < 3.3
                 , yaml                          >= 0.8        && < 0.9
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5

executable         server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, server

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

    other-modules: Handler.PlaybackGrantSpec
                 , Handler.PlaybackGrantsSpec
                 , Handler.DevicesSpec
                 , Handler.SubscribersSpec
                 , TestExtension
                 , TestFactory
                 , TestImport

    build-depends: HUnit
                 , aeson
                 , asn1-encoding
                 , asn1-types
                 , base
                 , base64-bytestring
                 , binary
                 , blaze-builder
                 , bytestring
                 , classy-prelude
                 , classy-prelude-yesod
                 , containers
                 , data-easy
                 , entropy
                 , file-embed
                 , hspec >= 2.0.0
                 , http-types
                 , monad-logger
                 , network
                 , persistent
                 , persistent-postgresql
                 , random
                 , resourcet
                 , server
                 , shakespeare
                 , text
                 , time
                 , transformers
                 , unordered-containers
                 , utf8-string
                 , vector
                 , wai
                 , wai-extra
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-persistent
                 , yesod-test
