name:              server
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src, app
    exposed-modules: Application
                     Data.Extension
                     Foundation
                     Handler.Extension
                     Handler.Devices
                     Handler.Feedback
                     Handler.Health
                     Handler.Home
                     Handler.LongDistanceTransfer
                     Handler.LongDistanceTransfers
                     Handler.PlaybackGrant
                     Handler.PlaybackGrants
                     Handler.ScreenCaptureDetections
                     Handler.DeviceUpdate
                     Handler.Subscribers
                     Import
                     Import.NoFoundation
                     Migrations
                     Model
                     Model.Extension
                     Model.PlaybackGrant
                     Model.LongDistanceTransfer
                     Model.PushNotification
                     Model.Subscriber
                     Model.Device
                     Settings

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0 -fno-warn-orphans
    else
        ghc-options:   -Wall -fwarn-tabs -O2 -fno-warn-orphans

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                RecordWildCards
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

    build-depends:
                   HDBC-postgresql
                 , SHA
                 , aeson
                 , asn1-encoding
                 , asn1-types
                 , aws
                 , base
                 , base16-bytestring
                 , base64-bytestring
                 , binary
                 , blaze-builder
                 , bytestring
                 , case-insensitive
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , conduit-extra
                 , connection
                 , containers
                 , data-default
                 , data-easy
                 , dbmigrations
                 , directory
                 , either
                 , email-validate
                 , entropy
                 , fast-logger
                 , file-embed
                 , filepath
                 , gogol
                 , gogol-storage
                 , hourglass
                 , http-conduit
                 , http-types
                 , http-client
                 , http-client-tls
                 , load-env
                 , mime-mail
                 , mime-types
                 , monad-control
                 , monad-logger
                 , MonadRandom
                 , mtl
                 , network
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , random
                 , safe
                 , silently
                 , template-haskell
                 , text
                 , time
                 , transformers
                 , unordered-containers
                 , utf8-string
                 , vector
                 , wai
                 , wai-cors
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core

executable         server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, server

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

    other-modules: Handler.PlaybackGrantSpec
                 , Handler.PlaybackGrantsSpec
                 , Handler.DevicesSpec
                 , Handler.DeviceUpdateSpec
                 , Handler.ScreenCaptureDetectionsSpec
                 , Handler.SubscribersSpec
                 , Handler.LongDistanceTransferSpec
                 , Handler.LongDistanceTransfersSpec
                 , TestExtension
                 , TestFactory
                 , TestImport

    build-depends: HUnit
                 , aeson
                 , asn1-encoding
                 , asn1-types
                 , base
                 , base64-bytestring
                 , binary
                 , blaze-builder
                 , bytestring
                 , classy-prelude
                 , classy-prelude-yesod
                 , containers
                 , data-easy
                 , entropy
                 , file-embed
                 , hspec >= 2.0.0
                 , http-client
                 , http-conduit
                 , http-types
                 , monad-logger
                 , network
                 , persistent
                 , persistent-postgresql
                 , random
                 , resourcet
                 , server
                 , shakespeare
                 , text
                 , time
                 , transformers
                 , unordered-containers
                 , utf8-string
                 , vector
                 , wai
                 , wai-extra
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-persistent
                 , yesod-test
